2021-05-06  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_constructor): Remove spurious
	commented insn.

2021-05-06  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_constructor): Use
	check_struct_field_constraint.
	* testsuite/poke.pkl/scons-constraints-1.pk: New test.
	* testsuite/poke.pkl/scons-constraints-2.pk: Likewise.
	* testsuite/poke.pktest/pktest-12.pk: Update test.

2021-05-06  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_printer): Skip absent fields.
	* testsuite/poke.pkl/printf-value-16.pk: New test.
	* testsuite/poke.pkl/printf-value-17.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2021-05-03  Luca Saiu  <positron@gnu.org>

	* cfg.mk (submodule-checks): Override setting in maint.mk, fixing
	a distcheck failure.

2021-05-03  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.map/maps-structs-constraints-2.pk: New test.
	* testsuite/poke.map/maps-structs-constraints-3.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2021-05-03  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (handle_struct_field_constraints): Pass
	@struct_type to check_struct_field_constraint.
	(check_struct_field_constraint): Add TYPE.FIELD information to the
	E_constraint exceptions.

2021-05-02  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/Makefile.am: use DISTCLEANFILES for the files generated
	by AX_CREATE_PKGCONFIG_INFO, not MOSTLYCLEANFILES.

2021-05-02  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/Makefile.am (generate-vm-files): New rule.
	(pvm-vm.h): Likewise.
	(pvm-vm1.c): Likewise.
	(pvm-vm2.c): Likewise.

2021-05-02  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/Makefile.am (MAINTAINERCLEANFILES): Add jitterc
	generated files and add $(srcdir) prefix to lex and bison
	generated files.
	* poke/Makefile.am (MAINTAINERCLEANFILES): Likewise.
	* DEV-NEWS: Add note about this.

2021-05-02  Jose E. Marchesi  <jemarch@gnu.org>
